# voltmeter

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
source/: channel.cpp  channel.hpp  command.cpp  command.hpp  epoll.hpp  exception.hpp  main.cpp  pool.hpp  queue.hpp  server.cpp  server.hpp  timer.hpp  values.cpp  values.hpp  voltio.hpp  voltmeter.cpp  voltmeter.hpp
source/Client/: CMakeLists.txt  dialog.cpp  dialog.h  main.cpp  woker_thread.cpp  woker_thread.h
tests/: CMakeLists.txt  cmdTestCl.cpp  cmdTestsSrv.cpp
